objects/Job_Form__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience_in_Months__c</fullName>
        <label>Experience in Months</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>Enter First Name of the Candidate</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <inlineHelpText>Enter your Gender</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Known__c</fullName>
        <label>Languages Known</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>C#</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>Enter last name of the Candidate</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Name__c</fullName>
        <formula>If( ISPICKVAL(Gender__c, 'M'), 'Mr.' , 'Mrs.') &amp; ' ' &amp; Last_Name__c &amp; ' , ' &amp; First_Name__c</formula>
        <label>Outlook Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Country__c</fullName>
        <inlineHelpText>Enter the Country Name where you prefer to work</inlineHelpText>
        <label>Preferred Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Expected__c</fullName>
        <inlineHelpText>Enter the Salary Expected</inlineHelpText>
        <label>Salary Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USID__c</fullName>
        <formula>'US' &amp; Last_Name__c &amp; LEFT(First_Name__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USID</label>
        <type>Text</type>
    </fields>
    <label>Job Form</label>
    <nameField>
        <displayFormat>J-{000}-</displayFormat>
        <label>Job Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Gender__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Outlook_Name__c</columns>
        <columns>USID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>USA_Queue_Job_Form</fullName>
        <filterScope>Queue</filterScope>
        <label>USA Queue</label>
        <queue>USA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>